@@ -2,7 +2,11 @@
 -----
 1. Only convert .m4a to .m4a.mp3 and vice-versa.
 2. Use textarea for exclude artists and albums settings items.
-3. When setting exclude artists, or albums, each should be on a newl line.
+3. When setting exclude artists, or albums, each should be on a new line.
+4. When filtering tracks due to previous entries, use artist and album IDs.
+5. When filtering tracks due to previous entries, allow multiple tracks from
+   albums where 'Album Artist' is 'Various Artists' or 'Various'
+6. When excluding albums, use 'Album Artist' not 'Artist'
 
 0.0.3
 -----
